<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="22dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="23dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_move_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/example_satu" />

        <Button
            android:id="@+id/btnMoveToIntent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/example_dua" />

        <Button
            android:id="@+id/btnRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/recyclerView" />

        <Button
            android:id="@+id/btnFragmen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:text="@string/button_fragment" />

    </LinearLayout>

</LinearLayout>